--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            color: blue;
+            color: red;
         }
     </style>
 </head>
