--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <p>Hello from Himaghna , nice to meet you</p>
+    <p>Hello from Himaghna , This is updated paragraph</p>
 </body>
 </html>
